/*
 * Created on Sat Sep 26 2020
 *
 * Copyright (c) storycraft. Licensed under the MIT Licence.
 */

buildscript {
    repositories {
        maven {
            name = 'StoryNetwork'
            url = 'https://raw.githubusercontent.com/story-network/maven/master/'
        }

        maven {
            url = 'https://maven.heartpattern.io/repository/maven-public/'
        }
    }

    dependencies {
        classpath 'sh.pancake:storymap:1.0.0'
    }
}

plugins {
    id 'java'
    id 'maven-publish'
    id 'com.github.johnrengelman.shadow' version '6.0.0'
}

apply plugin: 'sh.pancake.storymap'

// Info
group 'sh.pancake'
version '1.0.0'

sourceCompatibility = 1.9
targetCompatibility = 1.9

compileJava.options.encoding = 'UTF-8'

repositories {

    jcenter()
    mavenCentral()

    maven {
        name = 'sponge'
        url = 'https://repo.spongepowered.org/maven'
    }

    maven {
		name = 'Fabric'
		url = 'http://maven.modmuss50.me/'
	}

    maven {
        url = 'https://maven.heartpattern.io/repository/maven-public/'
    }

    maven {
        name = 'StoryNetwork'
        url = 'https://raw.githubusercontent.com/story-network/maven/master/'
    }

}

minecraft {
    version = '1.16.3'
}

configurations {
    implementation.extendsFrom(embed)
}

dependencies {

    embed 'sh.pancake:story-network-common:1.0.0'

    // Runtime mc deobfuscator
    embed 'io.heartpattern:mcremapper:2.0.2-SNAPSHOT'

    // Mixin modding
    embed('org.spongepowered:mixin:0.8') {
        exclude module: 'launchwrapper'
        exclude module: 'modlauncher'
        exclude group: 'org.apache.logging.log4j', module: 'log4j-core'
    }
    
    embed group: 'com.google.guava', name: 'guava', version: '29.0-jre'

    embed 'com.google.code.gson:gson:2.8.6'

    // Kotlin support
    embed 'org.jetbrains.kotlin:kotlin-stdlib:1.4.10'
    embed 'org.jetbrains.kotlin:kotlin-reflect:1.4.10'

    // log4j for logging
    embed 'org.apache.logging.log4j:log4j-core:2.8.1'
    embed 'org.apache.logging.log4j:log4j-api:2.8.1'
    embed 'org.apache.logging.log4j:log4j-slf4j-impl:2.8.1'

    // asm for mixin
    implementation 'org.ow2.asm:asm:7.1'
	implementation 'org.ow2.asm:asm-analysis:7.1'
	implementation 'org.ow2.asm:asm-commons:7.1'
	implementation 'org.ow2.asm:asm-tree:7.1'

    // idk why but mixin exclude this
	embed 'org.ow2.asm:asm-util:7.1'

}

shadowJar {

    configurations = [project.configurations.embed]

}

// Copy target_version so PancakeServer can identify it
task createTargetVersion()  {
    doLast {
        new File("build/resources/main", "target_version").text = minecraft.version
    }
}
compileJava.dependsOn createTargetVersion

jar {

    finalizedBy shadowJar

    manifest {
        attributes 'Created-By': System.properties['java.vm.version'] + ' (' + System.properties['java.vm.vendor'] + ')'
        attributes 'Main-Class': 'sh.pancake.main.Main'
    }
}

sourceSets {
    main {
        java {
            srcDir 'src/main/java'
        }

        resources {
            srcDir 'src/main/resources'
        }

    }
}

publishing {
    repositories {
        maven {
            name = 'StoryNetwork'
            url = uri('../maven')
        }
    }

    publications {
        mavenJava(MavenPublication) {
            artifactId = 'pancake-server'
            from components.java
        }
    }
}